<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mq.myvtg.fragment.FrgmtContact">

    <include layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin_large"
        android:layout_marginRight="@dimen/activity_horizontal_margin_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/address"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_metfone_building" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_content_panel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="18dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="@string/label_customer_service_name"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_service_content_panel" />
    </LinearLayout>
</LinearLayout>
