<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dlg_noti"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <com.mq.myvtg.ui.TVRobotoBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlg_buy_num_title"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <com.mq.myvtg.ui.TVRobotoRegular
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dlg_buy_num_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/black" />

        <com.mq.myvtg.ui.TVRobotoBold
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:text="@string/button_ok"
            android:textAlignment="center"
            android:textColor="@color/text_default_active_color"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>