<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/space_left_right"
    android:paddingRight="@dimen/space_left_right">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_account"
            android:gravity="center_horizontal"
            style="@style/TextTitleApp"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_vertical"
            android:orientation="horizontal">

            <com.mq.myvtg.ui.EdRobotoRegular
                android:id="@+id/inputPhoneNo"
                style="@style/EditTextMV"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:maxLength="15"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:digits="0123456789"
                android:hint="@string/phone_number" />

            <ImageView
                style="@style/EditTextMVIconLeft"
                android:src="@drawable/ic_phone" />
        </FrameLayout>

        <include
            android:id="@+id/validatePhoneNumber"
            android:visibility="gone"
            layout="@layout/error_inline" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_vertical"
            android:orientation="horizontal">

            <com.mq.myvtg.ui.EdRobotoRegular
                android:id="@+id/inputPwd"
                style="@style/EditTextMV"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:hint="@string/label_password" />

            <ImageView
                style="@style/EditTextMVIconLeft"
                android:src="@drawable/ic_lock" />

            <ImageButton
                android:id="@+id/btnShowPassword"
                style="@style/EditTextMVIconRight"
                android:background="@drawable/ic_eye"
                android:clickable="true"/>
        </FrameLayout>

        <include
            android:id="@+id/validatePassword"
            android:visibility="gone"
            layout="@layout/error_inline" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_vertical">

            <TextView
                android:id="@+id/btnForgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="left|center_vertical"
                android:text="@string/label_forgot_password"
                android:textColor="@color/label_gray_color"
                android:clickable="true"/>

            <LinearLayout
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/version_2_background_button_login"
                android:clickable="true">

                <com.mq.myvtg.ui.TVRobotoBold
                    android:id="@+id/textButtonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_button"
                    android:paddingRight="@dimen/padding_button"
                    android:text="@string/sign_in"
                    android:textAlignment="center"
                    android:textColor="@color/white_alpha100"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/space_vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/tvDontHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/label_do_not_have_account"/>
            <TextView
                android:id="@+id/btnSignUp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_signup"
                android:layout_marginLeft="3dp"
                android:textColor="@color/red"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
