<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="19dp"
    android:background="@drawable/dialog_bg_radius_10">
    <TextView
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/filter"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textColor="@color/app_text_title_color"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:minHeight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTypeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PopupFilterGroupTitleStyle"
                android:text="@string/label_type" />
            <RadioGroup
                android:id="@+id/radioGroupType"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvRankGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PopupFilterGroupTitleStyle"
                android:text="@string/rank" />
            <RadioGroup
                android:id="@+id/radioGroupRank"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/dialogCancel"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/bg_btn_negative"
            android:layout_marginRight="15dp"
            android:clickable="true">

            <com.mq.myvtg.ui.TVRobotoBold
                android:id="@+id/tvNagetive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textColor="@color/white_alpha100"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialogOK"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="end|center_vertical"
            android:background="@drawable/version_2_background_button_login"
            android:clickable="true">

            <com.mq.myvtg.ui.TVRobotoBold
                android:id="@+id/tvPositive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textAlignment="center"
                android:textColor="@color/white_alpha100"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>