<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin_large"
    android:layout_marginRight="@dimen/activity_horizontal_margin_large">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_vertical"
        android:orientation="horizontal">

        <com.mq.myvtg.ui.EdRobotoRegular
            android:id="@+id/edPhoneNumber"
            style="@style/EditTextMV"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:maxLength="15"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:digits="0123456789"
            android:hint="@string/phone_number" />

        <ImageView
            style="@style/EditTextMVIconLeft"
            android:src="@drawable/ic_phone" />
    </FrameLayout>

    <include
        android:id="@+id/validatePhoneNumber"
        android:visibility="gone"
        layout="@layout/error_inline" />

    <LinearLayout
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/version_2_background_button_login"
        android:clickable="true">

        <com.mq.myvtg.ui.TVRobotoBold
            android:id="@+id/textButtonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_button"
            android:paddingRight="@dimen/padding_button"
            android:text="@string/str_continue"
            android:textAlignment="center"
            android:textColor="@color/white_alpha100"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/space_vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/tvDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_do_not_have_account"/>
        <TextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/label_signup"
            android:layout_marginLeft="3dp"
            android:textColor="@color/red"/>
    </LinearLayout>
</LinearLayout>