<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/header" />

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_card_info_element"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvIsdn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/isdn"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"
                    android:textStyle="bold"
                    android:text="@string/gift_name"/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"
                    android:textStyle="bold"
                    android:text="@string/date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"
                    android:textStyle="bold"
                    android:text="@string/partner_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"
                    android:textStyle="bold"
                    android:text="@string/discount"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_card_info_element"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvIsdnValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tvGiftNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"/>

                <TextView
                    android:id="@+id/tvDateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"/>

                <TextView
                    android:id="@+id/tvPartnerNameValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"/>

                <TextView
                    android:id="@+id/tvDiscountRateValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_card_info_element"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/btnExchangeGift"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:minWidth="180dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/version_2_background_button_login"
        android:clickable="true">

        <com.mq.myvtg.ui.TVRobotoBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/btn_min_width"
            android:text="@string/exchange_gift"
            android:textAlignment="center"
            android:textColor="@color/white_alpha100"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>