<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription,HardcodedText,RtlHardcoded,SpUsage,RtlSymmetry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/home_detail_header">

        <ImageButton
            android:id="@+id/btn_close"
            style="@style/Header_Button"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:src="@drawable/bg_btn_state_close_orange"/>

        <com.mq.myvtg.ui.TVRobotoMedium
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/btn_close"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:lines="1"
            android:ellipsize="end"
            android:gravity="left|center"
            android:text="@string/label_xac_nhan"
            android:textAllCaps="true"
            android:textSize="18dp"/>

        <ImageView
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_divide_height"
            android:background="@color/dlg_line_color_01"/>

    </RelativeLayout>

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <com.mq.myvtg.ui.TVRobotoRegular
           android:id="@+id/tv_message"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="20dp"
           android:text="Bạn muốn đăng ký dịch vụ Ứng tiền?"
           android:gravity="center"
           android:textColor="@color/dlg_text_color_01"
           android:textSize="20dp" />
   </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.mq.myvtg.ui.ButtonRobotoMedium
            android:id="@+id/btn_negative"
            style="@style/BaseStyle_ButtonCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textAllCaps="true"
            android:text="@string/label_close"/>

        <com.mq.myvtg.ui.ButtonRobotoMedium
            android:id="@+id/btn_positive"
            style="@style/BaseStyle_ButtonOK"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:text="@string/label_ok"/>

    </LinearLayout>
</LinearLayout>